--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
-version 2015122017 release 1.0.3
+version 2015122018 release 1.0.3
 
-Fixes drawer bug
+Fixes drawer bug and footer
 
 version 2015122008
 
